Applied two media queries remove some css and added few to correct x-overflow and make the code more responsive

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 .body{
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
     background-color: white;
+    position: relative;
+
 }
